# T2D-VAT-Suite

./: 1_ml_top_features.csv  README.md  pyproject.toml  requirements.txt
apps/: __init__.py
apps/gui/: README.md  logic.py  main.py  viewmodel.py  workers.py
apps/gui/resources/: main.qml
apps/gui/ui/: config_panel.py  left_pane.py  main_window.py  right_pane.py
apps/injector/: __init__.py  cli.py
apps/reproducer/: __init__.py  cli.py
data/: 41598_2021_96995_MOESM1_ESM.xlsx
docs/: t2d-VAT_two_tool_plan.md
outputs/: results.json
outputs/injector/: metrics.json
outputs/injector_run/: all_features.json
outputs/reproducer/: results.json  top_features.json
t2dvat_core/: __init__.py  io.py  ml.py  plots.py  preprocessing.py  stats.py  utils.py
tests/: conftest.py  test_pipeline_smoke.py
