[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t2dvat-suite"
version = "0.1.0"
description = "Two-tool architecture for VAT T2D proteomics analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "T2D Lab", email = "lab@example.com"}
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "openpyxl>=3.6.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.0.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["t2dvat_core*", "apps*"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
